@@ -4,7 +4,8 @@
 
  Changes between 1.0.1l and 1.0.1m [xx XXX xxxx]
 
-  *)
+  *) Removed the export ciphers from the DEFAULT ciphers
+     [Kurt Roeckx]
 
  Changes between 1.0.1k and 1.0.1l [15 Jan 2015]
 
